# bsbingo

./: README.md  buzzwords.txt  pyproject.toml
bsbingo/: bsbingo.py  cli.py
